<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="fill_parent">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <LinearLayout
      android:orientation="vertical"
      android:layout_gravity="center_vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:text="@string/card_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/balance_view"
        android:textAlignment="center" />
      <TextView
        android:text="@string/card_remain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/remain_view"
        android:textAlignment="center" />
    </LinearLayout>
  </LinearLayout>
  <Button
    android:id="@+id/button_deposit"
    android:text="@string/deposit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <Button
    android:id="@+id/button_withdraw"
    android:text="@string/withdraw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <Button
    android:id="@+id/button_purchase"
    android:text="@string/purchase"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>
