<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<TextView
  android:text="@string/purchase"
  android:layout_width="match_parent"
  android:layout_height="wrap_content" />
  <EditText
    android:id="@+id/input_purchase_amount"
    android:hint="@string/please_input_amount"
    android:inputType="number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <EditText
      android:id="@+id/input_purchase_terms"
      android:hint="@string/please_input_terms"
      android:inputType="number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
</LinearLayout>
